--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server server.json -p 3333"
+    "server": "json-server server.json -p 3030"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +44,11 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "@types/react-dom": "^17.0.3",
+    "@types/react-modal": "^3.12.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "json-server": "^0.16.3",
+    "typescript": "^4.2.4"
   }
 }
